SynProdGITV1/force-app/main/default/objects/Contact/validationRules/Require_Account_For_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_For_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName &lt;&gt; &quot;Employee&quot;,
    ISBLANK(AccountId)
)</errorConditionFormula>
    <errorMessage>Please link this contact to an Account.</errorMessage>
</ValidationRule>