SynProdGITV1/force-app/main/default/objects/Contact/validationRules/Restrict_Employee_Contact_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Employee_Contact_Edit</fullName>
    <active>true</active>
    <description>SS2-T75</description>
    <errorConditionFormula>AND(
    $RecordType.Name = &quot;Employee&quot;,
    NOT($Permission.Create_Edit_Employees)
)</errorConditionFormula>
    <errorMessage>You do not have permission to update Employee</errorMessage>
</ValidationRule>