SynProdGITV1/force-app/main/default/objects/Contact/listViews/All_Employees.listView-meta.xml
<ListView>
    <fullName>All_Employees</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Employee</value>
    </filters>
    <label>All Employees</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>